<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="90hz"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">
        <ListPreference
            app:useSimpleSummaryProvider="true"
            app:key="cpusche"
            app:defaultValue="balance"
            app:entries="@array/sche_entries"
            app:entryValues="@array/sche_values"
            app:title="@string/cpusche" />

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/statusbar">
        <Preference
            android:key="statusbar_setting"
            android:title="状态栏设置"
            android:summary="自定义状态栏图标" >
            <intent
                android:targetPackage="com.android.systemui" android:targetClass="com.android.systemui.DemoMode" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>